--- a/client/templates/contests/create/contestCreate.sass
+++ b/client/templates/contests/create/contestCreate.sass
@@ -3,3 +3,9 @@ $lightGrey: #f4f4f4
 .form-section
   background: $lightGrey
   padding: 10px
+
+.expandable
+  display: none
+
+  &.is-expanded
+    display: block
