first pass of contest creation page... to be changed with a form integration

--- a/client/lib/stylesheets/custom.bootstrap.z-customStyles.less
+++ b/client/lib/stylesheets/custom.bootstrap.z-customStyles.less
@@ -4,9 +4,11 @@
 @import "custom.bootstrap.import.less";
 
 .btn-default {
+  a,
   &:hover {
     background-color: @btn-default-bg-hover;
     text-decoration: none;
+    color: white
   }
 }
 
