--- a/client/templates/contests/create/fixtureCreate.jade
+++ b/client/templates/contests/create/fixtureCreate.jade
@@ -20,4 +20,4 @@ template(name='fixtureCreate')
             div {{momentify startsAt}} #{away} @ #{home}
       div(class='col-xs-8')
         div(class='btn btn-lg btn-default create-fixture')
-          a(href='/contest/create') Create Contests
+          a(href='/contest/create') Go to Contest Creation
