--- a/client/templates/contests/create/contestCreate.sass
+++ b/client/templates/contests/create/contestCreate.sass
@@ -4,8 +4,12 @@ $lightGrey: #f4f4f4
   background: $lightGrey
   padding: 10px
 
+  // input[type=radio]
+    // display: none
+
 .expandable
   display: none
 
   &.is-expanded
     display: block
+
