--- a/client/templates/layouts/contest/contestLayout.jade
+++ b/client/templates/layouts/contest/contestLayout.jade
@@ -5,6 +5,6 @@ template(name='contestLayout')
       div(class='row')
         +contestTitle
       div(class='row')
-        +contestSlateContainer
+        +contestFixtureContainer
       div(class='row')
         +contestLineupContainer
