--- a/client/templates/lobby/contestDetailsModal.jade
+++ b/client/templates/lobby/contestDetailsModal.jade
@@ -8,7 +8,7 @@ template(name="contestDetailsModal")
           span Entry Fee: #{entryFee}  |
           span Entries: #{entries}  |
           span Prizes: $#{prizes}  |
-          span {{#if guaranteedPrizes}}Guaranteed Payouts{{/if}}
+          span {{#if guaranteedPrizes }}Guaranteed Payouts {{/if}}
       div(class="modal-body")
         ul(class="nav nav-tabs")
           li(role="presentation")
@@ -17,8 +17,7 @@ template(name="contestDetailsModal")
             a(data-target='#prizes') Prizes
         div(class='tab-content')
           div(role="tabpanel" class='tab-pane active' id='info')
-            +each slate
-              div #{gameName}
+            div hello
           div(role="tabpanel" class='tab-pane' id='prizes') #{readablePrizePayouts}
       div(class="modal-footer")
         button(type="button" class="btn btn-default" data-dismiss="modal") Close
