--- a/client/templates/lobby/contestResultsItem.jade
+++ b/client/templates/lobby/contestResultsItem.jade
@@ -1,11 +1,11 @@
 template(name="contestResultsItem")
   div(class='row contestResultItem size-12')
-    div(class='col-xs-7 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal' data-name='#{contestName}') #{contestName}
-    div(class='col-xs-2 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal' data-name='#{contestName}') #{entries}
-    div(class='col-xs-2 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal' data-name='#{contestName}') #{entrySize}
-    div(class='col-xs-2 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal' data-name='#{contestName}') $#{entryFee}
-    div(class='col-xs-2 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal' data-name='#{contestName}') $#{prizes}
-    div(class='col-xs-3 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal' data-name='#{contestName}') {{momentify startsAt}}
+    div(class='col-xs-7 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal-#{_id}' data-name='#{contestName}') #{contestName}
+    div(class='col-xs-2 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal-#{_id}' data-name='#{contestName}') #{entries}
+    div(class='col-xs-2 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal-#{_id}' data-name='#{contestName}') #{entrySize}
+    div(class='col-xs-2 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal-#{_id}' data-name='#{contestName}') $#{entryFee}
+    div(class='col-xs-2 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal-#{_id}' data-name='#{contestName}') $#{prizes}
+    div(class='col-xs-3 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal-#{_id}' data-name='#{contestName}') {{momentify startsAt}}
     +if guaranteedPrizes
       div(class='col-xs-1 contestIcons vAlign')
         span(class='contestGuaranteedPayIcon') G
