Wire together the contest Lobby with Contest ID page

--- a/client/templates/contests/contests.jade
+++ b/client/templates/contests/contests.jade
@@ -9,8 +9,8 @@ template(name='contestTitle')
 template(name='contestFixtureContainer')
   div(class='col-xs-24')
     div(class='row')
-      each fixture
-        div(class='col-xs-2') #{gameName} {{momentify starts 'shortTime'}}
+      each fixture.events
+        div(class='col-xs-2') #{away} @ #{home} {{momentify starts 'shortTime'}}
 
 template(name='contestLineupContainer')
   div(class='contestLineupContainer col-xs-24')
