--- a/client/templates/lobby/contestDetailsModal.jade
+++ b/client/templates/lobby/contestDetailsModal.jade
@@ -25,4 +25,4 @@ template(name="contestDetailsModal")
       div(class="modal-footer")
         button(type="button" class="btn btn-default" data-dismiss="modal") Close
         button(type="button" class="btn btn-primary")
-          a(href='contest/1234/draftteam') Enter New Lineup
+          a(href='/contest/#{_id}/draftteam') Enter New Lineup
