--- a/client/templates/layouts/navLayout/navLayout.sass
+++ b/client/templates/layouts/navLayout/navLayout.sass
@@ -88,5 +88,6 @@ $progressbar-color: $highlightGreen
     border-color: $highlightGreen
 
 #globalContainer
+  padding-top: 50px
   width: 1170px
   margin: auto
