--- a/client/templates/lobby/contestDetailsModal.jade
+++ b/client/templates/lobby/contestDetailsModal.jade
@@ -6,7 +6,7 @@ template(name="contestDetailsModal")
         h2(class="modal-title" id="exampleModalLabel") Contest Name
         h6
           span Entry Fee: $#{entryFee}  |
-          span Entries: #{entries}  |
+          span Entries: #{entryCount}  |
           span Size: #{entrySize}  |
           span Prizes: $#{prizes}  |
           span {{#if guaranteedPrizes }}Guaranteed Payouts {{/if}}
