--- a/client/templates/lobby/contestResultsItem.jade
+++ b/client/templates/lobby/contestResultsItem.jade
@@ -1,7 +1,7 @@
 template(name="contestResultsItem")
   div(class='row contestResultItem size-12')
     div(class='col-xs-7 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal-#{_id}' data-name='#{contestName}') #{contestName}
-    div(class='col-xs-2 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal-#{_id}' data-name='#{contestName}') #{entries}
+    div(class='col-xs-2 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal-#{_id}' data-name='#{contestName}') #{entryCount}
     div(class='col-xs-2 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal-#{_id}' data-name='#{contestName}') #{entrySize}
     div(class='col-xs-2 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal-#{_id}' data-name='#{contestName}') $#{entryFee}
     div(class='col-xs-2 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal-#{_id}' data-name='#{contestName}') $#{prizes}
