--- a/client/templates/contests/contests.sass
+++ b/client/templates/contests/contests.sass
@@ -13,7 +13,7 @@ $lightBlue: #3f96cb
     &.selected-player
       background-color: #f2fbe9
 
-  .player-list-table-position-filters
+  .position-filters
     height: 40px
     background-color: $lighterGrey
 
@@ -21,6 +21,17 @@ $lightBlue: #3f96cb
     height: 100%
     color: $lightBlue
     border-right: 1px white solid
+
+.event-filters
+  .event-filter-tab
+    height: 100%
+    border: 1px solid white
+
+    &:hover
+      border: 1px solid $highlightGreen
+
+  .event-filter
+    height: 60px
 
 .fa-plus-circle
     color: $highlightGreen
