--- a/client/templates/contests/contests.sass
+++ b/client/templates/contests/contests.sass
@@ -22,7 +22,9 @@ $lightBlue: #3f96cb
     color: $lightBlue
     border-right: 1px white solid
 
-.event-filters
+#event-filters-container
+  // width: 900px
+
   .event-filter-tab
     height: 100%
     border: 1px solid white
