--- a/client/templates/contestLists/historyContestList/historyContests.jade
+++ b/client/templates/contestLists/historyContestList/historyContests.jade
@@ -6,11 +6,13 @@ template(name='historyContestListContainer')
       div(class='row')
         h4(class='col-xs-8') You have #{ historyEntriesCount } contest entries in your history.
       div(class='row')
-        h3(class='col-xs-3') Contest ID
-        h3(class='col-xs-6') Name
+        h3(class='col-xs-3') Entry ID
+        h3(class='col-xs-6') Contest
         h3(class='col-xs-6') Entry
       +each historyContests
         div(class='row')
-          div(class='col-xs-3') #{contestId}
-          div(class='col-xs-6') #{contestName}
+          div(class='col-xs-3')
+            a(href="{{pathFor 'entryLayout'}}") #{contestId}
+          div(class='col-xs-6') 
+            a(href="{{pathFor 'entryLayout'}}") #{contestName}
           div(class='col-xs-6') $#{entryFee}
