--- a/client/templates/contestLists/upcomingContestList/upcomingContestList.jade
+++ b/client/templates/contestLists/upcomingContestList/upcomingContestList.jade
@@ -6,13 +6,17 @@ template(name='upcomingContestListContainer')
       div(class='row')
         h4(class='col-xs-8') You have #{ upcomingEntriesCount } contest entries upcoming.
       div(class='row')
-        h3(class='col-xs-3') Entry ID
-        h3(class='col-xs-6') Contest
+        h3(class='col-xs-2') Entry
+        h3(class='col-xs-4') Contest
+        h3(class='col-xs-12') Players
         h3(class='col-xs-6') Entry
       +each upcomingContests
         div(class='row')
-          div(class='col-xs-3') 
-            a(href="{{pathFor 'entryLayout'}}") #{contestId}
-          div(class='col-xs-6') 
+          div(class='col-xs-2') 
+            a(href="{{pathFor 'entryLayout'}}") 
+              i(class="fa fa-money pointer")
+          div(class='col-xs-4') 
             a(href="{{pathFor 'entryLayout'}}") #{contestName}
+          div(class='col-xs-12 size-9')
+            +entryViewNames
           div(class='col-xs-6') $#{entryFee}
