add border for draftTeam view

--- a/client/templates/contests/contests.sass
+++ b/client/templates/contests/contests.sass
@@ -53,12 +53,16 @@ $lightBlue: #3f96cb
 
 #player-list-table-container
   height: 600px
+  border: 1px solid $lightGrey
 
 #player-list-table
   border: 1px solid $lightGrey
 
   .row
     border-bottom: 1px solid $lightGrey
+
+    &:last-child
+      border-bottom: 0px
 
 .lineup-table
   border: 1px solid $lightGrey
