--- a/client/templates/contests/contests.jade
+++ b/client/templates/contests/contests.jade
@@ -52,7 +52,7 @@ template(name='contestLineupContainer')
                 div(class='col-xs-6 player-name vAlign') #{full_name}
                 div(class='col-xs-3 player-fppg vAlign') 12.3
                 div(class='col-xs-3 player-played vAlign') 13
-                div(class='col-xs-5 player-fixture vAlign') {{currentGame ..}}
+                div(class='col-xs-5 player-fixture vAlign') {{ getCurrentEvent ..}}
                 div(class='col-xs-2 player-salary vAlign') $4,500
                 if inCurrentLineup
                   div(class='col-xs-2 col-xs-push-1 lineup-player-remove vAlign')
