--- a/client/templates/layouts/navLayout/navLayout.sass
+++ b/client/templates/layouts/navLayout/navLayout.sass
@@ -44,6 +44,9 @@ $progressbar-color: $highlightGreen
 
 // Bootstrap Navbar
 //
+.nav-container
+  margin-bottom: 10px
+   
 .container-fluid
   padding: 0
 
