--- a/client/templates/contests/create/fixtureCreate.jade
+++ b/client/templates/contests/create/fixtureCreate.jade
@@ -1,23 +1,33 @@
 template(name='fixtureCreate')
   div(class='col-xs-24')
     div(class='row')
-      h1(id='contest-title' class='col-xs-16') Fixtures Creation Tool
-      div How this tool works: Click on Events, View the Currently created fixture in the Console. Then click "Create Fixture" to insert into the DB.
-      div Next steps are to add more sports, ways to change the events to query, and better UI for fixture creation, including CRUD.
-    div(class='row')
-      div(class='col-xs-8')
-        h3 Events
+      div(class='col-xs-6')
+        h4 Step 1: Update Events
+        select(id='event-sport-select')
+          option(value='NFL') NFL Playoff Week
+        select(id='event-schedule-select')
+          option(value='3') 3
+          option(value='4') 4
+        div(class='btn btn-sm btn-default update-events') Update Events
+      div(class='col-xs-6')
+        h4 Step 2: Create a Fixture
         +each allFutureEvents
           div(class='event-options') {{momentify startsAt}} #{home} #{away}
-        div(class='btn btn-lg btn-default create-fixture') Create Fixture
-      div(class='col-xs-8')
-        h3 Fixtures
-        +each fixtures
-          div
-            span
-              h4 {{ momentify startsAt }}: {{ fixturesEventCount }} Events
-          +each fixturesEvents
-            div {{momentify startsAt}} #{away} @ #{home}
-      div(class='col-xs-8')
-        div(class='btn btn-lg btn-default create-fixture')
-          a(href='{{pathFor contestCreateLayout }}') Go to Contest Creation
+        div(class='btn btn-sm btn-default create-fixture') Create Fixture
+      div(class='col-xs-6')
+        h4 Step 3. View Fixtures
+          +each fixtures
+            div(class='row')
+              div(class='col-xs-4')
+                span
+                  h6 {{ fixturesEventCount }} Events
+              div(class='col-xs-16') 
+                +each fixturesEvents
+                  div(class='row vAlign')
+                    div(class='col-xs-24 size-12') {{momentify startsAt}} #{away} @ #{home}
+              div(class='col-xs-2 remove-fixture')
+                i(class='fa fa-minus-circle pointer')
+      div(class='col-xs-6')
+        h4 Step 4. Create Contests
+        div(class='btn btn-sm btn-default create-fixture')
+          a(href="{{pathFor 'contestCreateLayout' }}") Create Contests!
