move files to folders according to josh owens recommendation

--- a/client/templates/layouts/navLayout/navLayout.sass
+++ b/client/templates/layouts/navLayout/navLayout.sass
@@ -44,7 +44,7 @@ $progressbar-color: $highlightGreen
 
 // Bootstrap Navbar
 //
-.nav-container
+#nav-container
   margin-bottom: 10px
    
 .container-fluid
