--- a/client/templates/layouts/navLayout/navLayout.jade
+++ b/client/templates/layouts/navLayout/navLayout.jade
@@ -33,6 +33,8 @@ template(name='navLayout')
                   a(href="{{ pathFor 'fixtureCreateLayout' }} ") Create Fixtures
                 li
                   a(href="{{pathFor 'contestCreateLayout' }}") Create Contests
+                li
+                  a(href="{{pathFor 'scoreLayout' }}") Score!
           ul(class="nav navbar-nav navbar-right")
             div(class="login-block")
               if user
